# stock-weather-agent

./: .env.example  .gitignore  README.md  config.py  main.py  mock_data.py  pyproject.toml
assignments/: planning_agent.py  react_agent.py
bonus/: cheat_sheet.md  pydantic_ai_version.py
tools/: __init__.py  stock_tool.py  weather_tool.py
